# django-debug-toolbar-mongo

./: .gitignore  README.md  pyproject.toml
debug_toolbar_mongo/: __init__.py  operation_tracker.py  panel.py  tracker.py  views.py
debug_toolbar_mongo/static/debug_toolbar_mongo/: debug_toolbar_mongo.js
debug_toolbar_mongo/templates/: mongo-explain.html  mongo-panel.html
example/: example.db  manage.py  settings.py  urls.py  views.py
example/management/commands/: gen_mongo_collection.py
