[tool.poetry]
name = "django-debug-toolbar-mongo"
version = "1.0.13"
description = ""
authors = ["Antonio <mr.antonsilin@gmail.com>"]
readme = "README.md"
packages = [{include = "debug_toolbar_mongo"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
pymongo = "^4.2.0"
django-debug-toolbar = ">=3.6.0,<5"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
