[tool.poetry]
name = "django-debug-toolbar-mongo"
version = "1.0.13"
description = ""
authors = ["Antonio <mr.antonsilin@gmail.com>"]
readme = "README.md"
packages = [{include = "debug_toolbar_mongo"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "*"
pymongo = "*"
django-debug-toolbar = ">=3.6.0,<5"
tqdm = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
